--- a/.github/workflows/workflow.yaml
+++ b/.github/workflows/workflow.yaml
@@ -1,6 +1,9 @@
 name: Continuos Integration
 
-on: pull_request
+on: 
+  pull_request:
+    branches:  
+      - main
 
 jobs:
   continuos-integration:
