--- a/.github/workflows/workflow.yaml
+++ b/.github/workflows/workflow.yaml
@@ -1,6 +1,9 @@
 name: Continuos Integration
 
-on: pull_request
+on: 
+  pull_request:
+    branches:
+      - main
 
 jobs:
   continuos-integration:
@@ -11,7 +14,7 @@ jobs:
       - name: Using Node.js
         uses: actions/setup-node@v2
         with:
-          node-version: 16.
+          node-version: 16.x
       - name: run install, build and test
         run: |
           npm install
