--- a/.github/workflows/workflow.yaml
+++ b/.github/workflows/workflow.yaml
@@ -3,7 +3,7 @@ name: Continuos Integration
 on: 
   pull_request:
     branches:  
-      - main
+      - develop
 
 jobs:
   continuos-integration:
