--- a/.github/workflows/workflow.yaml
+++ b/.github/workflows/workflow.yaml
@@ -1,9 +1,6 @@
 name: Continuos Integration
 
-on: 
-  push_request:
-    branches:  
-      - develop
+on: push 
 
 jobs:
   continuos-integration:
